{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 47,
  "lineage": "b73dafe7-8d63-f8f2-c2eb-af66a3973171",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095985447969:subnet/subnet-dff017b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-dff017b9",
            "map_public_ip_on_launch": true,
            "owner_id": "095985447969",
            "state": "available",
            "vpc_id": "vpc-a5380bdf"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095985447969:subnet/subnet-f956b4d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "id": "subnet-f956b4d8",
            "map_public_ip_on_launch": true,
            "owner_id": "095985447969",
            "state": "available",
            "vpc_id": "vpc-a5380bdf"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095985447969:subnet/subnet-872097ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-872097ca",
            "map_public_ip_on_launch": true,
            "owner_id": "095985447969",
            "state": "available",
            "vpc_id": "vpc-a5380bdf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095985447969:vpc/vpc-a5380bdf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-96950feb",
            "default_route_table_id": "rtb-f9b20c87",
            "default_security_group_id": "sg-003ade2a",
            "dhcp_options_id": "dopt-8eb76bf4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-a5380bdf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-f9b20c87",
            "owner_id": "095985447969"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046842448f9e74e7d",
            "arn": "arn:aws:ec2:us-east-1:095985447969:instance/i-0ee6b116169fdc70e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-host",
            "id": "i-0ee6b116169fdc70e",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ad9a3bbe3b469d18",
            "private_dns": "ip-172-31-13-149.ec2.internal",
            "private_ip": "172.31.13.149",
            "public_dns": "ec2-18-210-7-125.compute-1.amazonaws.com",
            "public_ip": "18.210.7.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0ea19df41bd37b3b1",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-common",
              "udagram-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-dff017b9",
            "tags": {
              "Name": "udagram-control_plane-1",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-000c2aa9d3a8880b2",
              "sg-0be2be2d51c6d2252"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046842448f9e74e7d",
            "arn": "arn:aws:ec2:us-east-1:095985447969:instance/i-031836ac18e072d5f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-host",
            "id": "i-031836ac18e072d5f",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-07128e95e53a43b4f",
            "private_dns": "ip-172-31-92-163.ec2.internal",
            "private_ip": "172.31.92.163",
            "public_dns": "ec2-3-91-230-62.compute-1.amazonaws.com",
            "public_ip": "3.91.230.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0939daecf15fc7876",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-common",
              "udagram-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f956b4d8",
            "tags": {
              "Name": "udagram-control_plane-2",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-000c2aa9d3a8880b2",
              "sg-0be2be2d51c6d2252"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046842448f9e74e7d",
            "arn": "arn:aws:ec2:us-east-1:095985447969:instance/i-0a070482a663bb613",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-host",
            "id": "i-0a070482a663bb613",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-092074d645ae5dbfb",
            "private_dns": "ip-172-31-20-10.ec2.internal",
            "private_ip": "172.31.20.10",
            "public_dns": "ec2-3-85-143-180.compute-1.amazonaws.com",
            "public_ip": "3.85.143.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0cbf42c9c14603409",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-common",
              "udagram-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-872097ca",
            "tags": {
              "Name": "udagram-control_plane-3",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-000c2aa9d3a8880b2",
              "sg-0be2be2d51c6d2252"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:095985447969:loadbalancer/net/udagram-api-lb/57e5d684c5b6b3d7",
            "arn_suffix": "net/udagram-api-lb/57e5d684c5b6b3d7",
            "dns_name": "udagram-api-lb-57e5d684c5b6b3d7.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:095985447969:loadbalancer/net/udagram-api-lb/57e5d684c5b6b3d7",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "udagram-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-872097ca"
              },
              {
                "subnet_id": "subnet-dff017b9"
              },
              {
                "subnet_id": "subnet-f956b4d8"
              }
            ],
            "subnets": [
              "subnet-872097ca",
              "subnet-dff017b9",
              "subnet-f956b4d8"
            ],
            "tags": {
              "Cluster": "udagram",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "vpc_id": "vpc-a5380bdf",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:095985447969:listener/net/udagram-api-lb/57e5d684c5b6b3d7/b910610ab5a57f8a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:095985447969:targetgroup/udagram-api/28aa5199d4797bf7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:095985447969:listener/net/udagram-api-lb/57e5d684c5b6b3d7/b910610ab5a57f8a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:095985447969:loadbalancer/net/udagram-api-lb/57e5d684c5b6b3d7",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:095985447969:targetgroup/udagram-api/28aa5199d4797bf7",
            "arn_suffix": "targetgroup/udagram-api/28aa5199d4797bf7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:095985447969:targetgroup/udagram-api/28aa5199d4797bf7",
            "lambda_multi_value_headers_enabled": false,
            "name": "udagram-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-a5380bdf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:095985447969:targetgroup/udagram-api/28aa5199d4797bf7-20200221051726435700000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:095985447969:targetgroup/udagram-api/28aa5199d4797bf7",
            "target_id": "i-0ee6b116169fdc70e"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:095985447969:targetgroup/udagram-api/28aa5199d4797bf7-20200221051726381600000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:095985447969:targetgroup/udagram-api/28aa5199d4797bf7",
            "target_id": "i-031836ac18e072d5f"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:095985447969:targetgroup/udagram-api/28aa5199d4797bf7-20200221051726481400000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:095985447969:targetgroup/udagram-api/28aa5199d4797bf7",
            "target_id": "i-0a070482a663bb613"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095985447969:security-group/sg-0be2be2d51c6d2252",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be2be2d51c6d2252",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "udagram-common",
            "name_prefix": null,
            "owner_id": "095985447969",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/udagram": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-a5380bdf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095985447969:security-group/sg-000c2aa9d3a8880b2",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-000c2aa9d3a8880b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "udagram-control_planes",
            "name_prefix": null,
            "owner_id": "095985447969",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/udagram": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-a5380bdf"
          }
        }
      ]
    }
  ]
}